<resources>
    <string name="app_name">GO SOPT Android</string>
    <string name="newjeans_hypeboy">뉴진스의 하입보이</string>
    <string name="menu_home">Home</string>
    <string name="menu_search">둘러보기</string>
    <string name="menu_gallery">갤러리</string>
    <string name="menu_player">음악</string>
    <string name="delete">삭제</string>
    <string name="owner">Owner: %s</string>
    <string name="language">Language: %s</string>
    <string name="stars">Stars: %s</string>
    <string name="forks">Forks: %s</string>
    <string name="music_selection">musicSelection</string>
    <string name="wise_saying">작은 기회로부터\n위대한 업적은 시작된다.</string>
    <string name="add">추가</string>
    <string name="music_name">음악 제목</string>
    <string name="singer_name">가수 이름</string>
    <string name="Image_url">이미지 URL</string>
    <string name="complete">완료</string>

    <!--    Login   -->
    <string name="login">LOGIN</string>
    <string name="please_input_id">아이디를 입력하세요</string>
    <string name="password">Password</string>
    <string name="please_input_password">비밀번호를 입력하세요</string>
    <string name="id">ID</string>
    <string name="sign_up">SIGNUP</string>
    <string name="name">Name</string>
    <string name="please_input_name">이름을 입력해주세요</string>
    <string name="skill">Skill</string>
    <string name="please_input_specialty">특기를 입력해주세요</string>
    <string name="sign_up_complete">회원가입 완료</string>
    <string name="login_complete">로그인에 성공했습니다.</string>
    <string name="prompt_id">ID</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign up</string>


    <!--    Error   -->
    <string name="sign_up_error_info_message">정보를 다시 입력해주세요</string>
    <string name="sign_up_error_name_message">이름을 입력해주세요</string>
    <string name="sign_up_error_skill_message">Skill을 입력해주세요</string>
    <string name="sign_up_id_error_message">아이디는 6자 이상이어야 합니다</string>
    <string name="sign_up_password_error_message">비밀번호는 8자 이상 이어야 합니다</string>
    <string name="sign_up_not_complete_message">회원가입을 먼저 진행해주세요</string>
    <string name="sign_up_failed_message">회원가입에 실패하였습니다</string>
    <string name="sign_up_success_message">회원가입에 성공하였습니다</string>
    <string name="sign_up_duplicate_id_message">이미 존재하는 ID입니다.</string>
    <string name="sign_up_available_id_message">사용 가능한 ID입니다.</string>
    <string name="login_not_complete_message">로그인에 실패하였습니다.</string>
    <string name="error_message">에러가 발생하였습니다.</string>

    <string name="user_name_null">이름이 없습니다.</string>
    <string name="user_specialty_null">특기가 없습니다</string>
    <string name="user_name_format">이름: %s</string>
    <string name="user_specialty_format">특기: %s</string>

    <string name="id_duplicate_check">아이디 중복 체크</string>
    <string name="action_id_duplicate_check">아이디 중복 체크를 해주세요</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>