<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="20dp">

    <EditText
        android:id="@+id/etMusicName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="10dp"
        android:hint="@string/music_name"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etSingerName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/singer_name"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="@id/etMusicName"
        app:layout_constraintStart_toStartOf="@id/etMusicName"
        app:layout_constraintTop_toBottomOf="@id/etMusicName" />

    <ImageView
        android:id="@+id/ivAddImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/baseline_add_24"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintBottom_toTopOf="@id/btComplete"
        app:layout_constraintStart_toStartOf="@id/etMusicName"
        app:layout_constraintEnd_toEndOf="@id/etMusicName"
        app:layout_constraintTop_toBottomOf="@id/etSingerName" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btComplete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pretendard_bold"
        android:text="@string/complete"
        android:textColor="?colorOnBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/etMusicName"
        app:layout_constraintStart_toStartOf="@id/etMusicName"
        app:layout_constraintTop_toBottomOf="@id/etImageUrl" />

</androidx.constraintlayout.widget.ConstraintLayout>